# LimitEngineV2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LEMath.cmake  LEShaderConverter.cmake  README.md
include/: InitializeOptions.h  LEManagers  LEPlatform  LERenderer  LimitEngine.h
include/Containers/: MapArray.h  Pair.h  VectorArray.h
include/Core/: Archive.h  AutoPointer.h  Common.h  Data.h  Debug.h  Event.h  EventListener.h  Function.h  Hash.h  Memory.h  MemoryAllocator.h  MetaData.h  Mutex.h  Object.h  ReferenceCountedObject.h  ReferenceCountedPointer.h  SerializableResource.h  Singleton.h  String.h  TaskPriority.h  TextParser.h  Thread.h  Timer.h  Util.h
include/Factories/: ArchiveFactory.h  ModelFactory.h  ResourceFactory.h  ResourceSourceFactory.h  ShaderFactory.h  TextParserFactory.h  TextureFactory.h
include/Managers/: Draw2DManager.h  DrawManager.h  MemoryManager.h  PipelineStateManager.h  PostProcessManager.h  RenderTargetPoolManager.h  ResourceManager.h  SceneManager.h  ShaderDriverManager.h  ShaderManager.h  TaskManager.h
include/Platform/: Platform_Windows.h
include/PostProcessors/: PostProcessAmbientOcclusion.h  PostProcessResolveFinalColor.h  PostProcessTemporalAA.h  PostProcessor.h
include/Renderer/: AABB.h  ByteColorRGBA.h  Camera.h  Camera2D.h  CinemaCamera.h  ColorTable.h  CommandBuffer.h  ConstantBuffer.h  Definitions.h  Draw.h  DrawCommand.h  FColorRGBA.h  FMatrix4x4.h  FPolygon.h  FRay.h  Font.h  FrameBuffer.h  Frustum.h  Frustum2D.h  GUIManager.h  GraphicsDefinitions.h  IndexBuffer.h  Light.h  LightIBL.h  LightManager.h  Material.h  Model.h  ModelFactory.h  ModelInstance.h  PipelineState.h  PipelineStateDescriptor.h  PostFilter.h  PostFilterManager.h  PostFilter_DOF.h  PostFilter_Filmic.h  PostFilter_MSAA.h  RenderBuffer.h  RenderContext.h  RenderState.h  SamplerState.h  (+19 more)
include/Shaders/: Draw2D.ps.h  Draw2D.vs.h  DrawFullscreen.ps.h  ResolveSceneColorSRGB.ps.h
resources/fonts/: System.font.lea
resources/models/: plane.model.lea  plane.model.text  sphere.model.lea  sphere.model.text
resources/textures/: EnvironmentBRDF.texture.lea
shader/: BRDF.shh  CommonDefinitions.shh  Draw2D.ps  Draw2D.vs  DrawFullscreen.ps  LightingUtilities.shh  ResolveSceneColorSRGB.ps  Standard_basepass.ps  Standard_basepass.vs  Standard_prepass.ps  Standard_prepass.vs  TemporalAA.ps
shader/DirectX11/: AmbientOcclusion.fsh  AmbientOcclusionBlur.fsh  BRDF.shh  CommonDefinitions.shh  Draw2D.fsh  Draw2D.vsh  DrawFont.fsh  DrawFullscreen.fsh  DrawIBL.fsh  DrawRigidMesh.fsh  DrawRigidMesh.vsh  LightingUtilities.shh  MakeIBLSpecularMipmap.fsh  OcclusionOnly.fsh  ResolveSceneColorSRGB.fsh  Standard.fsh  Standard.vsh  TemporalAA.fsh
source/: LimitEngine.cpp
source/Core/: Archive.cpp  Debug.cpp  Event.cpp  Memory.cpp  MemoryAllocator.cpp  String.cpp  TextParser.cpp  Thread.cpp  Timer.cpp  Util.cpp
source/Factories/: ArchiveFactory.cpp  ModelFactory.cpp  ShaderFactory.cpp  TextParserFactory.cpp  TextureFactory.cpp
source/Factories/SourceFactories/: TGASourceFactory.inl  TextParserSourceFactory.inl  XMLSourceFactory.inl
source/Managers/: Draw2DManager.cpp  DrawManager.cpp  PipelineStateManager.cpp  PostProcessManager.cpp  RenderTargetPoolManager.cpp  ResourceManager.cpp  SceneManager.cpp  ShaderDriverManager.cpp  ShaderManager.cpp  ShaderParameterParser.cpp  TaskManager.cpp
source/Platform/DirectX11/: CommandImpl_DirectX11.inl  DrawManagerImpl_DirectX11.inl  IndexBufferImpl_DirectX11.inl  PrivateDefinitions_DirectX11.h  SamplerStateImpl_DirectX11.inl  ShaderImpl_DirectX11.inl  TextureImpl_DirectX11.inl  VertexBufferImpl_DirectX11.inl
source/Platform/DirectX12/: CommandImpl_DirectX12.inl  ConstantBufferImpl_DirectX12.inl  DrawManagerImpl_DirectX12.inl  IndexBufferImpl_DirectX12.inl  PipelineStateImpl_DirectX12.inl  PrivateDefinitions_DirectX12.h  SamplerStateImpl_DirectX12.inl  ShaderImpl_DirectX12.inl  TextureImpl_DirectX12.inl  VertexBufferImpl_DirectX12.inl
source/Platform/Windows/: DebugImpl_Windows.inl  EventImpl_Windows.inl  ResourceLoader_Windows.inl  ThreadImpl_Windows.inl
source/PostProcessors/: PostProcessAmbientOcclusion.cpp  PostProcessResolveFinalColor.cpp  PostProcessTemporalAA.cpp
source/Renderer/: AABB.cpp  Camera.cpp  CinemaCamera.cpp  CommandBuffer.cpp  ConstantBuffer.cpp  FPolygon.cpp  Font.cpp  IndexBuffer.cpp  Light.cpp  LightIBL.cpp  Material.cpp  Model.cpp  ModelInstance.cpp  PipelineState.cpp  RenderContext.cpp  SamplerState.cpp  Shader.cpp  ShaderDriver.cpp  ShaderDriverBakedBRDF.cpp  ShaderDriverGeneral.cpp  ShaderDriverLight.cpp  ShaderDriverParameter.cpp  ShaderParameterParser.cpp  Sprite.cpp  Texture.cpp  VertexBuffer.cpp
source/Shaders/: Shader_DrawFullScreenShader.ps.h  Shader_ResolveSceneColorSRGB.ps.h
test/: CMakeLists.txt  ToolBase.cmake  test.cpp
tools/DataConverter/: CMakeLists.txt  LimitEngine.cmake  openexr.cmake  zlib.cmake
tools/DataConverter/Source/: Definitions.h  EXRSourceFactory.h  FontConverter.cpp  FontConverter.h  Logger.h  ModelConverter.cpp  ModelConverter.h  TextureConverter.cpp  TextureConverter.h  main.cpp
tools/pythonutils/: LEModelGenerator.py  ObjToModelXML.py  Shader2Text.py  TTF2LEFont.py  convexr.py  nef2exr.py
